--- a/Gall.ipynb
+++ b/Gall.ipynb
@@ -100,12 +100,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def lr_schedule(epoch):\n",
-        "    initial_lr = 1e-4\n",
-        "    k = 0.2  # Decay rate\n",
-        "    lr = initial_lr * np.exp(-k * epoch)\n",
-        "    print('Learning rate: ', lr)\n",
-        "    return lr"
+        "model.save(\"msfe_gallnet_x_model.h5\")"
       ],
       "metadata": {
         "id": "sQ4bW8S9HNbO"
